# quant-cpp-libs

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_binomial.cpp  bench_factorial.cpp  bench_fibo.cpp
libmath/: CMakeLists.txt
libmath/include/libmath/: combinatorics.hpp  fibonacci.hpp
libmath/src/: fibonacci.cpp
libmath/src/combinatorics/: binomial.cpp  catalan.cpp  factorial.cpp  multinomial.cpp  permutations.cpp
tests/: CMakeLists.txt  binomial_tests.cpp  factorial_tests.cpp  fibo_tests.cpp
